--- a/list_books.html
+++ b/list_books.html
@@ -35,9 +35,8 @@
             <ul>
                 <li><a href="index_admin.html">Home</a></li>
                 <li><a href="contact_us.html"> Contact us</a></li>
-                <li><a href="about_us.html">About us</a></li>
-                <li><a href="terms_of_use.html">Terms of Use</a></li>
-                <li><a href="add_book.html">Add book</a></li>
+                <li><a href="about_us.html">About us</a></li>              
+                <li><a href="add_book.html">Add a new book</a></li>
                 <li><a href="sign in.html">sign in</a></li>
                 <li><a href="list_books.html">view list of books</a></li>
                 <li><a href="profile_admin.html">profile</a></li>
