--- a/book2.html
+++ b/book2.html
@@ -52,8 +52,8 @@
 
     <div class="book_info">
 
-        <p>Book id:</p>
-        <p>Book name</p>
+        <p>Book id: 12 </p>
+        <p>Book name: </p>
         <p>book authour:</p>
         <p>book category:</p>
 
