--- a/book1.html
+++ b/book1.html
@@ -137,6 +137,9 @@
       <script src="book.js">
         console.log(location.href)
       </script> -->
+
+
+      <script src="book.js"></script>
 </body>
 
 
