--- a/index_admin.html
+++ b/index_admin.html
@@ -14,10 +14,10 @@
             <div class="nav-center">
                 <ul>
                     <li class="homee"><a href="admin_index.html" class="home">Home</a></li>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Add Book</a></li>
+                    <li><a href="about_us.html">About Us</a></li>
+                    <li><a href="add_book.html">Add Book</a></li>
                     <li><a href="list_books.html">view list of books</a></li>
-                    <li><a href="">Profile</a></li>
+                    <li><a href="profile_admin.html">Profile</a></li>
                     <li class="log-out">
                         <form>
                             <input type="submit" value="Log Out" class="log-out">
