--- a/index_user.html
+++ b/index_user.html
@@ -14,9 +14,9 @@
             <div class="nav-center">
                 <ul>
                     <li class="homee"><a href="user_index.html" class="home">Home</a></li>
-                    <li><a href="">Our Books</a></li>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Profile</a></li>
+                    <li><a href="list_books_user.html">List Of Books</a></li>
+                    <li><a href="about_us.html">About Us</a></li>
+                    <li><a href="profile_user.html">Profile</a></li>
                     <li><a href="">Log Out</a></li>
                 </ul>
             </div>
