--- a/list_books_user.html
+++ b/list_books_user.html
@@ -116,7 +116,7 @@
 <main class="main1">
   
 
-    <div class="slider">
+    <div class="slider" id="slider-history">
 
       <div class="book">
 
@@ -133,8 +133,10 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow" data-borrowed="true" >Borrow</button>
-          <div id="error-borrow"></div>
+          <button class="borrow" data-borrowed="true" >Borrow</button>
+         <div class="error-borrow"  dat-o="p">
+
+         </div>
         </div>
 
       </div>
@@ -156,8 +158,10 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+        <button class="borrow">Borrow</button>
+         <div class="error-borrow">
+
+         </div>
         </div>
 
       </div>
@@ -178,8 +182,10 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+        <button class="borrow">Borrow</button>
+         <div class="error-borrow">
+
+         </div>
         </div>
 
       </div>
@@ -201,8 +207,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -224,8 +230,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -247,8 +253,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -270,8 +276,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -293,8 +299,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -316,8 +322,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -339,8 +345,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -362,8 +368,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -385,8 +391,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -408,8 +414,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -439,7 +445,7 @@
 <main class="main1">
   
 
-    <div class="slider">
+    <div class="slider" id="slider-romantic">
 
       <div class="book">
 
@@ -456,8 +462,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -479,8 +485,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -501,8 +507,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -524,8 +530,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -547,8 +553,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -570,8 +576,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -593,8 +599,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -616,8 +622,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -639,8 +645,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -662,8 +668,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -685,8 +691,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -708,8 +714,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -731,8 +737,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+          <button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -763,7 +769,7 @@
 <main class="main1">
   
 
-    <div class="slider">
+    <div class="slider" id="slider-programming">
 
       <div class="book">
 
@@ -780,8 +786,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -803,8 +809,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -825,8 +831,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -848,8 +854,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -871,8 +877,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -894,8 +900,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -917,8 +923,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -940,8 +946,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -963,8 +969,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -986,8 +992,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -1009,8 +1015,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -1032,8 +1038,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -1055,8 +1061,8 @@
             <span>Book Author: </span>Lorem, ipsum.
           </div>
 
-          <button id="borrow">Borrow</button>
-          <div id="error-borrow"></div>
+<button class="borrow">Borrow</button>
+         <div class="error-borrow"></div>
         </div>
 
       </div>
@@ -1125,7 +1131,7 @@
 
 
       <script src="slide.js"></script>
-      <script src="book.js"></script>
+      <!-- <script src="book.js"></script> -->
 
 
       
