--- a/add_book.html
+++ b/add_book.html
@@ -40,7 +40,7 @@
                 <li><a href="about_us.html">About us</a></li>
                 <li><a href="sign in.html">sign in</a></li>
                 <li><a href="list_books.html">view list of books</a></li>
-                <li><a href="profile_admin.html">profile</a></li>
+                <li><a href="profile_user.html">profile</a></li>
 
             </ul>
 
