--- a/index_admin.html
+++ b/index_admin.html
@@ -17,7 +17,7 @@
                     <li><a href="about_us.html">About Us</a></li>
                     <li><a href="add_book.html">Add Book</a></li>
                     <li><a href="list_books.html">view list of books</a></li>
-                    <li><a href="profile_admin.html">Profile</a></li>
+                    <li><a href="profile_user.html">Profile</a></li>
                     <li class="log-out">
                         <form>
                             <input type="submit" value="Log Out" class="log-out">
