--- a/index_user.html
+++ b/index_user.html
@@ -9,14 +9,15 @@
     <body>
         <nav class="nav-bar">
             <div class="nav-left">
-                <h1><a href="user_index.html">Bibleoticha<span>.</span></a></h1>
+                <h1><a href="index_user.html">Bibleoticha<span>.</span></a></h1>
             </div>
             <div class="nav-center">
                 <ul>
-                    <li class="homee"><a href="user_index.html" class="home">Home</a></li>
-                    <li><a href="list_books_user.html">List Of Books</a></li>
+                    <li class="homee"><a href="index_user.html" class="home">Home</a></li>
+                    <li><a href="list_books_user.html">View  List Of Books</a></li>
                     <li><a href="about_us.html">About Us</a></li>
-                    <li><a href="profile_user.html">Profile</a></li>
+                    <li><a href="sign in.html">Sign in</a></li>
+                    <li><a href="profile.html">Profile</a></li>
                     <li><a href="">Log Out</a></li>
                 </ul>
             </div>
