--- a/add_book.html
+++ b/add_book.html
@@ -30,17 +30,17 @@
 
     <nav class="nav-bar">
         <div class="nav-left">
-            <h1><a href="index.html">Bibleoticha<span>.</span></a></h1>
+            <h1><a href="index_admin.html">Bibleoticha<span>.</span></a></h1>
         </div>
         <div class="nav-center">
 
             <ul>
 
-                <li class="homee"><a href="index.html" class="home">Home</a></li>
+                <li class="homee"><a href="index_admin.html" class="home">Home</a></li>
                 <li><a href="about_us.html">About us</a></li>
                 <li><a href="sign in.html">sign in</a></li>
                 <li><a href="list_books.html">view list of books</a></li>
-                <li><a href="profile_user.html">profile</a></li>
+                <li><a href="profile.html">profile</a></li>
 
             </ul>
 
