--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="css/all.css">
-        <link rel="stylesheet" href="style.css">
+
+       
+  
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta name="descrption" content="">
+            <title>Document</title>
+
+            <link rel="stylesheet" href="css/all.css">
+            <link rel="stylesheet" href="style.css">
+            <link rel="icon" type="image/x-icon" href="imgs/openbookjpg.jpg">
         
     </head>
     <body>
