--- a/index_admin.html
+++ b/index_admin.html
@@ -9,15 +9,16 @@
     <body>
         <nav class="nav-bar">
             <div class="nav-left">
-                <h1><a href="admin_index.html">Bibleoticha<span>.</span></a></h1>
+                <h1><a href="index.html">Bibleoticha<span>.</span></a></h1>
             </div>
             <div class="nav-center">
                 <ul>
-                    <li class="homee"><a href="admin_index.html" class="home">Home</a></li>
+                    <li class="homee"><a href="index.html" class="home">Home</a></li>
                     <li><a href="about_us.html">About Us</a></li>
+                    <li><a href="sign in.html">Sign in</a></li>
                     <li><a href="add_book.html">Add Book</a></li>
                     <li><a href="list_books.html">view list of books</a></li>
-                    <li><a href="profile_user.html">Profile</a></li>
+                    <li><a href="profile.html">Profile</a></li>
                     <li class="log-out">
                         <form>
                             <input type="submit" value="Log Out" class="log-out">
