--- a/list_books.html
+++ b/list_books.html
@@ -47,7 +47,7 @@
             <li><a href="about_us.html">About Us</a></li>
             <li><a href="add_book.html">Add Book</a></li>
             <li><a href="sign in.html">Sign in</a></li>
-            <li><a href="profile_user.html">Profile</a></li>
+            <li><a href="profile.html">Profile</a></li>
             <li class="log-out">
                 <form>
                     <input type="submit" value="Log Out" class="log-out">
