--- a/edit_book.html
+++ b/edit_book.html
@@ -69,7 +69,7 @@
         <div class="form-container">
 
 
-            <form method="get" id="edit-book-form" action="" target="_self">
+            <form method="get" id="edit-book-form"  >
 
 
                 <div class="form-header">
