--- a/contact_us.html
+++ b/contact_us.html
@@ -12,14 +12,15 @@
             <div class="nav-center">
                 <ul>
                     <li class="homee"><a href="index.html" class="home">Home</a></li>
-                    <li><a href="">Books</a></li>
-                    <li><a href="">Gallery</a></li>
+                    <li><a href="index.html #Gallery">Our Books</a></li>
+                    <li><a href="sign in.html">Sign In</a></li>
                 </ul>
             </div>
             <div class="nav-right">
-               <a href="contact us.html"> <i class="fa-solid fa-phone"></i></a>
+               <a href="contact_us.html"> <i class="fa-solid fa-phone"></i></a>
             </div>
         </nav>
+
 
         <section class="section4">
             <div class="container4">
