--- a/edit_book.html
+++ b/edit_book.html
@@ -39,11 +39,12 @@
             <ul>
 
                 <li class="homee"><a href="index_admin.html" class="home">Home</a></li>
-                <li><a href="about_us.html">About us</a></li>
-                <li><a href="sign in.html">sign in</a></li>
                 <li><a href="add_book.html">Add a new book</a></li>
                 <li><a href="list_books.html">view list of books</a></li>
                 <li><a href="profile.html">profile</a></li>
+                <li class="log-out">
+                    <a href="index.html">Log Out</a>
+                </li>
 
             </ul>
 
