--- a/index_user.html
+++ b/index_user.html
@@ -15,10 +15,10 @@
                 <ul>
                     <li class="homee"><a href="index_user.html" class="home">Home</a></li>
                     <li><a href="list_books_user.html">View  List Of Books</a></li>
-                    <li><a href="about_us.html">About Us</a></li>
-                    <li><a href="sign in.html">Sign in</a></li>
                     <li><a href="profile.html">Profile</a></li>
-                    <li><a href="">Log Out</a></li>
+                    <li class="log-out">
+                        <a href="index.html">Log Out</a>
+                    </li>
                 </ul>
             </div>
             <div class="nav-right">
