--- a/list_books.html
+++ b/list_books.html
@@ -33,7 +33,7 @@
 
 
 
- </body>   
+
 
 
 
@@ -44,15 +44,11 @@
     <div class="nav-center">
         <ul>
             <li class="homee"><a href="index_admin.html" class="home">Home</a></li>
-            <li><a href="about_us.html">About Us</a></li>
             <li><a href="add_book.html">Add Book</a></li>
-            <li><a href="sign in.html">Sign in</a></li>
             <li><a href="profile.html">Profile</a></li>
             <li class="log-out">
-                <form>
-                    <input type="submit" value="Log Out" class="log-out">
-                </form>
-</li>
+              <a href="index.html">Log Out</a>
+          </li>
         </ul>
     </div>
     <div class="nav-right">
@@ -319,6 +315,6 @@
 
 
   <script src="slide.js"></script>
-  <script src="delete.js"></script>
+</body>   
 
 </html>
