--- a/list_books_user.html
+++ b/list_books_user.html
@@ -36,14 +36,10 @@
         <div class="nav-center">
             <ul>
                 <li class="homee"><a href="index_user.html" class="home">Home</a></li>
-                <li><a href="about_us.html">About Us</a></li>
-                <li><a href="sign in.html">Sign in</a></li>
                 <li><a href="profile.html">Profile</a></li>
                 <li class="log-out">
-                    <form>
-                        <input type="submit" value="Log Out" class="log-out">
-                    </form>
-    </li>
+                  <a href="index.html">Log Out</a>
+              </li>
             </ul>
         </div>
         <div class="nav-right">
@@ -380,7 +376,7 @@
 
 
       <script src="slide.js"></script>
-      <!-- <script src="book.js"></script> -->
+
 
 
       
